# trollsar

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt  sonar-project.properties
.circleci/: config.yml
.github/actions/optixsetup/: action.yml
.github/actions/systemsetup/: action.yml
.github/workflows/: sonar.yml  test.yml
config/conan/profiles/: clang13
include/optix/: driver.h
include/view/: initializeOptix.h
src/: CMakeLists.txt  main.cpp
src/arithmetic/: simpleAdd.cpp
src/optix/: driver.cpp
src/view/: initializeOptix.cpp
src/view/qml/: FramedImage.qml  MainWindow.qml  qmldir
test/: CMakeLists.txt  footest.cpp  simpleAddCatch2Test.cpp  simpleAddTest.cpp
tools/CI/: Dockerfile  conanfile.txt
